// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDefaults should provide default values 1`] = `
Array [
  Array [
    Object {
      "defaults": Object {},
    },
  ],
]
`;

exports[`withDefaults should still provide default values without Provider 1`] = `
Array [
  Array [
    Object {
      "defaults": Object {},
      "mockFn": [MockFunction] {
        "calls": [Circular],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
  ],
]
`;
